# local-char

./: Cargo.toml  LICENSE  README.md  history.json  history_tui.json  history_web.json
src/: main.rs  tui.rs  web.rs
src/characters/: character.json
src/core/: chat.rs
src/web/: index.html  script.js  style.css
