[package]
name = "local-char"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
axum = "0.7"
tokio = { version = "1", features = ["full"] }